--- a/android/app/src/debug/res/values/strings.xml
+++ b/android/app/src/debug/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="add_photo_camera">Add Photo ( Camera )</string>
     <string name="add_text">Add Text</string>
     <string name="new_page">New Page</string>
-    <string name="app_name">Smart Wind</string>
+    <string name="app_name">SmartWind (Debug)</string>
 </resources>
