after beta create

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="add_photo_camera">Add Photo ( Camera )</string>
     <string name="add_text">Add Text</string>
     <string name="new_page">New Page</string>
-    <string name="app_name">Smart Wind</string>
+    <string name="app_name">SmartWind V2</string>
     <string name="done">Done</string>
     <string name="todo">TODO</string>
     <string name="color">Color</string>
